2008-07-22  Chao-ying Fu  <fu@mips.com>

	* config/tc-mips.c (mips_ip): Reset s to argsStart.

2008-07-22  Jie Zhang  <jie.zhang@analog.com>

	* config/tc-bfin.c (bfin_gen_loop): Remove loop symbol.

2008-07-21  DJ Delorie  <dj@redhat.com>

	* config/tc-h8300.c (fix_operand_size): Use the default size
	specified by the .lbranch/.sbranch pseudos.

2008-07-18  DJ Delorie  <dj@redhat.com>

	* config/tc-m32c.h (H_TICK_HEX): Define.
	* config/tc-m32c.c (OPTION_H_TICK_HEX): Define.
	(md_longopts): Add support for it.
	(md_parse_option): Likewise.
	* doc/as.texinfo (Overview): Add new m32c options.
	* doc/c-m32c.texi (M32C-Modifiers): Likewise

	* as.h: (enable_h_tick_hex): New.
	* app.c (enable_h_tick_hex): New.
	(LEX_IS_H): New.
	(do_scrub_begin): Mark 'H' and 'h' as special if enable_h_tick_hex.
	(do_scrub_chars): If enable_h_tick_hex and 'h', check for H'00
	style hex constants and convert the input stream to 0x00 style.
	(do_scrub_chars): If a 'X style character constant is found after
	a symbol character (like you're or X'00), warn the user.

2008-07-10  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (mips16_mark_labels): Use ELF_ST_SET_MIPS16.
	(mips_fix_adjustable): Likewise.
	(mips_frob_file_after_relocs): Likewise.

2008-07-08  Nathan Sidwell  <nathan@codesourcery.com>

	* config/tc-m68k.c (m68k_set_cpu, m68k_set_arch): Don't complain
	about overriding an earlier setting.

2008-07-07  Adam Nemet  <anemet@caviumnetworks.com>

	* config/tc-mips.c (NO_ISA_COP): New macro.
	(COP_INSN): New macro.
	(is_opcode_valid): Use them.
	(macro) <ld_st>: Use them.  Don't accept coprocessor load store
	insns based on the ISA if CPU is NO_ISA_COP.
	<copz>: Likewise for coprocessor operations.

2008-07-07  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_fix_adjustable): Don't adjust MOVW/MOVT
	relocations. 

2008-07-07  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* configure.tgt: Add bfin-*-rtems*.
